@@ -1,3 +1,8 @@
+2007-06-05  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil/AssemblyNameReference.cs:
+		Cache the fullname when possible.
+
 2007-05-31  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil/ModuleDefinition.cs:
